fix overflow fo card

--- a/map-app/src/app/map/map.component.css
+++ b/map-app/src/app/map/map.component.css
@@ -14,11 +14,11 @@
 
 .overlay {
   /* position: absolute; */
-  bottom: 0;
+  /* bottom: 0;
   left: 0;
-  padding-left: 2vh;
+  padding-left: 2vh; */
   width: 35%;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: #181919;
   color: #B2B2B2;
   font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
